Fix box-shadow properties for consistency and remove unnecessary whitespace in CSS files

--- a/assets/styles/experiences.css
+++ b/assets/styles/experiences.css
@@ -11,7 +11,7 @@
     background-color: var(--ice-white);
     padding: 20px;
     border-radius: 10px;
-    box-shadow: 0 4px 8px rgb(255 255 255 / 10%);
+    box-shadow: 0 4px 8px rgb(0 0 0 / 10%);
 }
 
 .experiences .experience .experience-info {
