--- a/assets/styles/projects.css
+++ b/assets/styles/projects.css
@@ -10,7 +10,7 @@
     border-radius: 10px;
     background-color: var(--ice-white);
     padding: 1rem;
-    box-shadow: 0 4px 8px rgb(0, 0, 0 / 10%);
+    box-shadow: 0 4px 8px rgb(0 0 0 / 10%);
     gap: 0.3rem;
 }
 
